@@ -1,0 +1,4 @@
+include CHANGES.txt
+include LICENSE.txt
+include MANIFEST.in
+include README.txt
